--- a/ArrangeArtboardsHierarchically.sketchplugin/Contents/Sketch/manifest.json
+++ b/ArrangeArtboardsHierarchically.sketchplugin/Contents/Sketch/manifest.json
@@ -4,19 +4,30 @@
   "commands" : [
     {
       "script" : "ArrangeArtboardsHierarchically.cocoascript",
-      "name" : "Arrange Artboards Hierarchically",
-      "identifier": "arrange-artboards-hierarchically",
+      "name" : "Arrange In Columns",
+      "identifier": "arrange-artboards-hierarchically-columns",
+      "shortcut": "control option H",
       "handlers" : {
-        "run" : "onRun"
+        "run" : "ArrangeArtboardsInColumns"
+      }
+    },
+    {
+      "script" : "ArrangeArtboardsHierarchically.cocoascript",
+      "name" : "Arrange In Rows",
+      "identifier": "arrange-artboards-hierarchically-rows",
+      "shortcut": "control option V",
+      "handlers" : {
+        "run" : "ArrangeArtboardsInRows"
       }
     }
   ],
   "menu" : {
     "title" : "Arrange Artboards Hierarchically",
-    "items" : ["arrange-artboards-hierarchically"]
+    "items" : ["arrange-artboards-hierarchically-columns","arrange-artboards-hierarchically-rows"]
   },
+
   "identifier" : "arrange-artboards-hierarchically-ca89124621745189",
-  "version" : "1.0.2",
+  "version" : "1.1.0",
   "description" : "Arrange artboards hierarchically depending on their name (based on the Sketch Slash naming pattern).",
   "authorEmail" : "oodesignux@gmail.com",
   "author": "oodesign",
